# agriculture-cameroun

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CONTRIBUTING.md  Dockerfile  FAQ.md  INSTALLATION.md  LICENSE  QUICKSTART.md  RAG_EVAL.md  README.md  USER_GUIDE.md  a2as.yaml  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
.adk/: session.db
agriculture/: __init__.py  agent.py  prompts.py  tools.py
agriculture/sub_agents/crops/: tools.py
agriculture/sub_agents/health/: __init__.py  agent.py
agriculture/sub_agents/weather/: __init__.py  agent.py  prompts.py  tools.py
agriculture_cameroun/: __init__.py  agent.py  config.py  tools.py
agriculture_cameroun/.adk/: session.db
agriculture_cameroun/api/: __init__.py  main.py  models.py
agriculture_cameroun/observability/: __init__.py  tracing.py
agriculture_cameroun/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  retriever.py  tools.py  vector_store.py
agriculture_cameroun/sub_agents/: __init__.py
agriculture_cameroun/sub_agents/crops/: __init__.py  agent.py  prompts.py  tools.py
agriculture_cameroun/sub_agents/economic/: agent.py  prompts.py  tools.py
agriculture_cameroun/sub_agents/health/: agent.py  prompts.py  tools.py
agriculture_cameroun/sub_agents/resources/: agent.py  prompts.py  tools.py
agriculture_cameroun/sub_agents/weather/: agent.py  tools.py
agriculture_cameroun/utils/: data.py  utils.py
data/chroma/: chroma.sqlite3
data/corpus/crops/: arachide.md  cacao.md  cafe.md  mais.md  manioc.md  plantain.md
data/corpus/economic/: cooperatives_financement.md  prix_marches.md
data/corpus/health/: cercosporiose_bananier.md  chenille_legionnaire_mais.md  mosaique_manioc.md  pourriture_brune_cacao.md
data/corpus/resources/: irrigation.md  sol_fertilisation.md
data/corpus/weather/: saisons_cameroun.md
evaluation/: __init__.py  ablation.py  dataset.py  golden.jsonl  judge.py  metrics.py  reporter.py  runner.py
evaluation/reports/: hybrid_k5.json
examples/: demo_cli.py  usage_examples.py
tests/: test_agents.py
