[tool.poetry]
name = "agriculture-cameroun"
version = "0.1.0"
description = "Système Multi-Agents pour l'Agriculture Camerounaise"
authors = ["Agriculture Team <team@agriculture-cm.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
google-adk = "^1.0.0"
google-generativeai = "^0.8.0"
python-dotenv = "^1.0.1"
pydantic = "^2.11.3"
aiohttp = "^3.12.0"
requests = "^2.32.0"
pandas = "^2.2.0"
numpy = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-vv -s"
testpaths = ["tests/"]
log_level = "DEBUG"
log_cli = true
filterwarnings = [
    "ignore::UserWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"